Revert "try thp for offheap too (manually in ForeignMemoryDataAccess)"
This reverts commit afc691d32fcc7cc93d881060451da23559d79cee.